# money-dashboard

./: app.py  config.py  pyproject.toml  requirements.txt
components/: charts.py  metrics.py  tables.py
data/: akshare_client.py  data_processor.py  macro_client.py  news_client.py  yfinance_client.py
pages/: 1_overview.py  2_energy.py  3_petrochemical.py  4_safe_haven.py  5_macro.py  6_news.py  7_comparison.py
